--- a/index.html
+++ b/index.html
@@ -4,9 +4,57 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Ecommerce Website</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Glass+Antiqua&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <title>Finesse</title>
 </head>
 <body>
+  <header>
+    <nav>
+      <h1 class="shop-title">Finesse</h1>
+      <ul class="shop-sections">
+        <li class="men">
+          <button class="men-btn">MEN</button>
+        </li>
+        <li class="women">
+          <button class="women-btn">WOMEN</button>
+        </li>
+        <li>
+          <button class="accessories-btn">ACCESSORIES</button>
+        </li>
+      </ul>
+      <div class="search-bar-container">
+        <input type="text" class="search-bar" placeholder="Shop for the latest fashion!">
+      </div>
+      <ul class="icons-list">
+        <li>
+          <button>
+            <span class="material-symbols-outlined profile-icon">
+              person
+            </span>
+          </button>
+        </li>
+        <li>
+          <button>
+            <span class="material-symbols-outlined favourites-icon">
+              favorite
+            </span>
+          </button>
+        </li>
+        <li>
+          <button>
+            <span class="material-symbols-outlined basket-icon">
+              shopping_basket
+            </span>
+          </button>
+        </li>
+      </ul>
+    </nav>
+  </header>
   <script type="module" src="script.js"></script>
 </body>
 </html>
