dropdowns added to nav

--- a/index.html
+++ b/index.html
@@ -17,14 +17,37 @@
     <nav>
       <h1 class="shop-title">Finesse</h1>
       <ul class="shop-sections">
-        <li class="men">
+        <li class="shop-section" id="men">
           <button class="men-btn">MEN</button>
+          <div class="dropdown hidden" id="dropdown">
+            <ul>
+              <li>Bestsellers</li>
+              <li>T-Shirts/Shirts</li>
+              <li>Trousers</li>
+              <li>Sweatshirts/Hoodies</li>
+            </ul>
+          </div>
         </li>
-        <li class="women">
+        <li class="shop-section">
           <button class="women-btn">WOMEN</button>
+          <div class="dropdown hidden">
+            <ul>
+              <li>Bestsellers</li>
+              <li>T-Shirts/Shirts</li>
+              <li>Trousers</li>
+              <li>Sweatshirts/Hoodies</li>
+            </ul>
+          </div>
         </li>
-        <li>
+        <li class="shop-section">
           <button class="accessories-btn">ACCESSORIES</button>
+          <div class="dropdown hidden">
+            <ul>
+              <li>Jewellery</li>
+              <li>Hats</li>
+              <li>Bags</li>
+            </ul>
+          </div>
         </li>
       </ul>
       <div class="search-bar-container">
