added buttons and transition to dropdowns

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Glass+Antiqua&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Glass+Antiqua&family=Neuton:wght@500&family=Raleway:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -21,10 +21,18 @@
           <button class="men-btn">MEN</button>
           <div class="dropdown hidden" id="dropdown">
             <ul>
-              <li>Bestsellers</li>
-              <li>T-Shirts/Shirts</li>
-              <li>Trousers</li>
-              <li>Sweatshirts/Hoodies</li>
+              <li>
+                <button>Bestsellers</button>
+              </li>
+              <li>
+                <button>T-Shirts/Shirts</button>
+              </li>
+              <li>
+                <button>Trousers</button>
+              </li>
+              <li>
+                <button>Sweatshirts/Hoodies</button>
+              </li>
             </ul>
           </div>
         </li>
@@ -32,10 +40,18 @@
           <button class="women-btn">WOMEN</button>
           <div class="dropdown hidden">
             <ul>
-              <li>Bestsellers</li>
-              <li>T-Shirts/Shirts</li>
-              <li>Trousers</li>
-              <li>Sweatshirts/Hoodies</li>
+              <li>
+                <button>Bestsellers</button>
+              </li>
+              <li>
+                <button>T-Shirts/Shirts</button>
+              </li>
+              <li>
+                <button>Trousers</button>
+              </li>
+              <li>
+                <button>Sweatshirts/Hoodies</button>
+              </li>
             </ul>
           </div>
         </li>
@@ -43,9 +59,15 @@
           <button class="accessories-btn">ACCESSORIES</button>
           <div class="dropdown hidden">
             <ul>
-              <li>Jewellery</li>
-              <li>Hats</li>
-              <li>Bags</li>
+              <li>
+                <button>Jewellery</button>
+              </li>
+              <li>
+                <button>Hats</button>
+              </li>
+              <li>
+                <button>Bags</button>
+              </li>
             </ul>
           </div>
         </li>
