added front page display

--- a/index.html
+++ b/index.html
@@ -100,6 +100,23 @@
       </ul>
     </nav>
   </header>
+  <main>
+    <section class="main-display">
+      <div class="main-display-left">
+        <img src="/Images/pexels-saulo-leite-7695498.jpg" alt="">
+        <button>
+          <h2>MEN</h2>
+        </button>
+      </div>
+      <div class="vertical-line"></div>
+      <div class="main-display-right">
+        <button>
+          <h2>WOMEN</h2>
+        </button>
+        <img src="/Images/pexels-godisable-jacob-1374910.jpg" alt="">
+      </div>
+    </section>
+  </main>
   <script type="module" src="script.js"></script>
 </body>
 </html>
