products display setup

--- a/index.html
+++ b/index.html
@@ -116,6 +116,76 @@
         <img src="/Images/pexels-godisable-jacob-1374910.jpg" alt="">
       </div>
     </section>
+    <section class="products-display">
+      <section class="men-bestsellers">
+        <div class="product-container">
+          <div class="product-img">
+            <button>
+              <span class="material-symbols-outlined favourites-icon">
+                favorite
+              </span>
+            </button>
+          </div>
+          <div class="product-footer">
+            <div>
+              <label for="quantity-value">Quantity:</label>
+              <input type="number" name="quantity-value" id="quantity-value">
+            </div>
+            <button>Add to Cart</button>
+          </div>
+        </div>
+        <div class="product-container">
+          <div class="product-img">
+            <button>
+              <span class="material-symbols-outlined favourites-icon">
+                favorite
+              </span>
+            </button>
+          </div>
+          <div class="product-footer"></div>
+        </div>
+        <div class="product-container">
+          <div class="product-img">
+            <button>
+              <span class="material-symbols-outlined favourites-icon">
+                favorite
+              </span>
+            </button>
+          </div>
+          <div class="product-footer"></div>
+        </div>
+        <div class="product-container">
+          <div class="product-img">
+            <button>
+              <span class="material-symbols-outlined favourites-icon">
+                favorite
+              </span>
+            </button>
+          </div>
+          <div class="product-footer"></div>
+        </div>
+        <div class="product-container">
+          <div class="product-img">
+            <button>
+              <span class="material-symbols-outlined favourites-icon">
+                favorite
+              </span>
+            </button>
+          </div>
+          <div class="product-footer"></div>
+        </div>
+        <div class="product-container">
+          <div class="product-img">
+            <button>
+              <span class="material-symbols-outlined favourites-icon">
+                favorite
+              </span>
+            </button>
+          </div>
+          <div class="product-footer"></div>
+        </div>
+      </section>
+    </section>
   </main>
   <script type="module" src="script.js"></script>
 </body>
