basket dropdown setup

--- a/index.html
+++ b/index.html
@@ -96,6 +96,20 @@
               shopping_basket
             </span>
           </button>
+          <div class="basket-dropdown">
+            <div class="basket-dropdown-heading">
+              <p>Basket</p>
+            </div>
+            <div class="basket-items">
+              <div class="basket-item">
+                <div class="basket-item-img"></div>
+                <div class="basket-item-info"></div>
+              </div>
+            </div>
+            <div class="basket-total">
+              <p>Total: £<span>54.75</span></p>
+            </div>
+          </div>
         </li>
       </ul>
     </nav>
@@ -142,7 +156,13 @@
               </span>
             </button>
           </div>
-          <div class="product-footer"></div>
+          <div class="product-footer">
+            <div>
+              <label for="quantity-value">Quantity:</label>
+              <input type="number" name="quantity-value" id="quantity-value">
+            </div>
+            <button>Add to Cart</button>
+          </div>
         </div>
         <div class="product-container">
           <div class="product-img">
@@ -152,7 +172,13 @@
               </span>
             </button>
           </div>
-          <div class="product-footer"></div>
+          <div class="product-footer">
+            <div>
+              <label for="quantity-value">Quantity:</label>
+              <input type="number" name="quantity-value" id="quantity-value">
+            </div>
+            <button>Add to Cart</button>
+          </div>
         </div>
         <div class="product-container">
           <div class="product-img">
@@ -162,7 +188,13 @@
               </span>
             </button>
           </div>
-          <div class="product-footer"></div>
+          <div class="product-footer">
+            <div>
+              <label for="quantity-value">Quantity:</label>
+              <input type="number" name="quantity-value" id="quantity-value">
+            </div>
+            <button>Add to Cart</button>
+          </div>
         </div>
         <div class="product-container">
           <div class="product-img">
@@ -172,7 +204,13 @@
               </span>
             </button>
           </div>
-          <div class="product-footer"></div>
+          <div class="product-footer">
+            <div>
+              <label for="quantity-value">Quantity:</label>
+              <input type="number" name="quantity-value" id="quantity-value">
+            </div>
+            <button>Add to Cart</button>
+          </div>
         </div>
         <div class="product-container">
           <div class="product-img">
@@ -182,7 +220,13 @@
               </span>
             </button>
           </div>
-          <div class="product-footer"></div>
+          <div class="product-footer">
+                        <div>
+              <label for="quantity-value">Quantity:</label>
+              <input type="number" name="quantity-value" id="quantity-value">
+            </div>
+            <button>Add to Cart</button>
+          </div>
         </div>
       </section>
     </section>
