--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Glass+Antiqua&family=Neuton:wght@500&family=Raleway:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <title>Finesse</title>
 </head>
 <body>
@@ -102,8 +100,84 @@
             </div>
             <div class="basket-items">
               <div class="basket-item">
-                <div class="basket-item-img"></div>
-                <div class="basket-item-info"></div>
+                <div class="basket-item-img-container">
+                  <img src="" alt="">
+                </div>
+                <div class="basket-item-info">
+                  <p>Jacket</p>
+                  <p>Quantity: <span>1</span></p>
+                </div>
+                <div class="close-btn-container">
+                  <button>
+                    <span class="material-symbols-outlined">
+                      close
+                    </span>
+                  </button>
+                </div>
+              </div>
+              <div class="basket-item">
+                <div class="basket-item-img-container">
+                  <img src="" alt="">
+                </div>
+                <div class="basket-item-info">
+                  <p>Jacket</p>
+                  <p>Quantity: <span>1</span></p>
+                </div>
+                <div class="close-btn-container">
+                  <button>
+                    <span class="material-symbols-outlined">
+                      close
+                    </span>
+                  </button>
+                </div>
+              </div>
+              <div class="basket-item">
+                <div class="basket-item-img-container">
+                  <img src="" alt="">
+                </div>
+                <div class="basket-item-info">
+                  <p>Jacket</p>
+                  <p>Quantity: <span>1</span></p>
+                </div>
+                <div class="close-btn-container">
+                  <button>
+                    <span class="material-symbols-outlined">
+                      close
+                    </span>
+                  </button>
+                </div>
+              </div>
+              <div class="basket-item">
+                <div class="basket-item-img-container">
+                  <img src="" alt="">
+                </div>
+                <div class="basket-item-info">
+                  <p>Jacket</p>
+                  <p>Quantity: <span>1</span></p>
+                </div>
+                <div class="close-btn-container">
+                  <button>
+                    <span class="material-symbols-outlined">
+                      close
+                    </span>
+                  </button>
+                </div>
+              </div>
+              <div class="basket-item">
+                <div class="basket-item-img-container">
+                  <img src="" alt="">
+                </div>
+                <div class="basket-item-info">
+                  <p>Jacket</p>
+                  <p>Quantity: <span>1</span></p>
+                </div>
+                <div class="close-btn-container">
+                  <button>
+                    <span class="material-symbols-outlined">
+                      close
+                    </span>
+                  </button>
+                </div>
               </div>
             </div>
             <div class="basket-total">
