sign in dropdown

--- a/index.html
+++ b/index.html
@@ -80,6 +80,17 @@
               person
             </span>
           </button>
+          <div class="sign-in-dropdown">
+            <div>
+              <p>Sign In</p>
+            </div>
+            <div>
+              <label for="username">Username:</label>
+              <input type="text" id="username">
+              <label for="password">Password:</label>
+              <input type="password" id="password">
+            </div>
+          </div>
         </li>
         <li>
           <button>
@@ -106,6 +117,7 @@
                 <div class="basket-item-info">
                   <p>Jacket</p>
                   <p>Quantity: <span>1</span></p>
+                  <p>Price: £<span>10.95</span></p>
                 </div>
                 <div class="close-btn-container">
                   <button>
