--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </span>
           </button>
           <div class="sign-in-dropdown">
-            <div>
+            <div class="sign-in-dropdown-heading">
               <p>Sign In</p>
             </div>
             <div>
@@ -98,6 +98,93 @@
               favorite
             </span>
           </button>
+          <div class="favourites-dropdown">
+            <div class="favourites-dropdown-heading">
+              <p>Favourites</p>
+            </div>
+            <div class="favourites-items">
+              <div class="favourites-item">
+                <div class="favourites-item-img-container">
+                  <img src="" alt="">
+                </div>
+                <div class="favourites-item-info">
+                  <p>Jacket</p>
+                  <p>Price: £<span>10.95</span></p>
+                </div>
+                <div class="close-btn-container">
+                  <button>
+                    <span class="material-symbols-outlined">
+                      close
+                    </span>
+                  </button>
+                </div>
+              </div>
+              <div class="favourites-item">
+                <div class="favourites-item-img-container">
+                  <img src="" alt="">
+                </div>
+                <div class="favourites-item-info">
+                  <p>Jacket</p>
+                  <p>Price: £<span>10.95</span></p>
+                </div>
+                <div class="close-btn-container">
+                  <button>
+                    <span class="material-symbols-outlined">
+                      close
+                    </span>
+                  </button>
+                </div>
+              </div>
+              <div class="favourites-item">
+                <div class="favourites-item-img-container">
+                  <img src="" alt="">
+                </div>
+                <div class="favourites-item-info">
+                  <p>Jacket</p>
+                  <p>Price: £<span>10.95</span></p>
+                </div>
+                <div class="close-btn-container">
+                  <button>
+                    <span class="material-symbols-outlined">
+                      close
+                    </span>
+                  </button>
+                </div>
+              </div>
+              <div class="favourites-item">
+                <div class="favourites-item-img-container">
+                  <img src="" alt="">
+                </div>
+                <div class="favourites-item-info">
+                  <p>Jacket</p>
+                  <p>Price: £<span>10.95</span></p>
+                </div>
+                <div class="close-btn-container">
+                  <button>
+                    <span class="material-symbols-outlined">
+                      close
+                    </span>
+                  </button>
+                </div>
+              </div>
+              <div class="favourites-item">
+                <div class="favourites-item-img-container">
+                  <img src="" alt="">
+                </div>
+                <div class="favourites-item-info">
+                  <p>Jacket</p>
+                  <p>Price: £<span>10.95</span></p>
+                </div>
+                <div class="close-btn-container">
+                  <button>
+                    <span class="material-symbols-outlined">
+                      close
+                    </span>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
         </li>
         <li>
           <button>
