added hover to icons

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
       </div>
       <ul class="icons-list">
         <li>
-          <button>
-            <span class="material-symbols-outlined profile-icon">
+          <button class="profile-icon">
+            <span class="material-symbols-outlined">
               person
             </span>
           </button>
@@ -93,8 +93,8 @@
           </div>
         </li>
         <li>
-          <button>
-            <span class="material-symbols-outlined favourites-icon">
+          <button class="favourites-icon">
+            <span class="material-symbols-outlined">
               favorite
             </span>
           </button>
@@ -187,8 +187,8 @@
           </div>
         </li>
         <li>
-          <button>
-            <span class="material-symbols-outlined basket-icon">
+          <button class="basket-icon">
+            <span class="material-symbols-outlined">
               shopping_basket
             </span>
           </button>
