added event listeners to icons

--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
       </div>
       <ul class="icons-list">
         <li>
-          <button class="profile-icon">
+          <button class="profile-icon" id="profile-icon-btn">
             <span class="material-symbols-outlined">
               person
             </span>
           </button>
-          <div class="sign-in-dropdown">
+          <div class="sign-in-dropdown" id="sign-in-dropdown">
             <div class="sign-in-dropdown-heading">
               <p>Sign In</p>
             </div>
@@ -93,12 +93,12 @@
           </div>
         </li>
         <li>
-          <button class="favourites-icon">
+          <button class="favourites-icon" id="favourites-btn">
             <span class="material-symbols-outlined">
               favorite
             </span>
           </button>
-          <div class="favourites-dropdown">
+          <div class="favourites-dropdown" id="favourites-dropdown">
             <div class="favourites-dropdown-heading">
               <p>Favourites</p>
             </div>
@@ -187,12 +187,12 @@
           </div>
         </li>
         <li>
-          <button class="basket-icon">
+          <button class="basket-icon" id="basket-btn">
             <span class="material-symbols-outlined">
               shopping_basket
             </span>
           </button>
-          <div class="basket-dropdown">
+          <div class="basket-dropdown" id="basket-dropdown">
             <div class="basket-dropdown-heading">
               <p>Basket</p>
             </div>
