--- a/index.html
+++ b/index.html
@@ -228,104 +228,7 @@
         <p>></p>
         <button>Bestsellers</button>
       </div>
-      <section class="men-bestsellers">
-        <div class="product-container">
-          <div class="product-img">
-            <img src="" alt="" id="product-img">
-            <button>
-              <span class="material-symbols-outlined favourites-icon">
-                favorite
-              </span>
-            </button>
-          </div>
-          <div class="product-footer">
-            <div>
-              <label for="quantity-value">Quantity:</label>
-              <input type="number" name="quantity-value" id="quantity-value">
-            </div>
-            <button id="add-to-cart-btn">Add to Cart</button>
-          </div>
-        </div>
-        <div class="product-container">
-          <div class="product-img">
-            <button>
-              <span class="material-symbols-outlined favourites-icon">
-                favorite
-              </span>
-            </button>
-          </div>
-          <div class="product-footer">
-            <div>
-              <label for="quantity-value">Quantity:</label>
-              <input type="number" name="quantity-value" id="quantity-value">
-            </div>
-            <button>Add to Cart</button>
-          </div>
-        </div>
-        <div class="product-container">
-          <div class="product-img">
-            <button>
-              <span class="material-symbols-outlined favourites-icon">
-                favorite
-              </span>
-            </button>
-          </div>
-          <div class="product-footer">
-            <div>
-              <label for="quantity-value">Quantity:</label>
-              <input type="number" name="quantity-value" id="quantity-value">
-            </div>
-            <button>Add to Cart</button>
-          </div>
-        </div>
-        <div class="product-container">
-          <div class="product-img">
-            <button>
-              <span class="material-symbols-outlined favourites-icon">
-                favorite
-              </span>
-            </button>
-          </div>
-          <div class="product-footer">
-            <div>
-              <label for="quantity-value">Quantity:</label>
-              <input type="number" name="quantity-value" id="quantity-value">
-            </div>
-            <button>Add to Cart</button>
-          </div>
-        </div>
-        <div class="product-container">
-          <div class="product-img">
-            <button>
-              <span class="material-symbols-outlined favourites-icon">
-                favorite
-              </span>
-            </button>
-          </div>
-          <div class="product-footer">
-            <div>
-              <label for="quantity-value">Quantity:</label>
-              <input type="number" name="quantity-value" id="quantity-value">
-            </div>
-            <button>Add to Cart</button>
-          </div>
-        </div>
-        <div class="product-container">
-          <div class="product-img">
-            <button>
-              <span class="material-symbols-outlined favourites-icon">
-                favorite
-              </span>
-            </button>
-          </div>
-          <div class="product-footer">
-                        <div>
-              <label for="quantity-value">Quantity:</label>
-              <input type="number" name="quantity-value" id="quantity-value">
-            </div>
-            <button>Add to Cart</button>
-          </div>
-        </div>
+      <section class="men-bestsellers" id="men-bestsellers">
       </section>
     </section>
   </main>
