adding to favourites button success

--- a/index.html
+++ b/index.html
@@ -102,88 +102,7 @@
             <div class="favourites-dropdown-heading">
               <p>Favourites</p>
             </div>
-            <div class="favourites-items">
-              <div class="favourites-item">
-                <div class="favourites-item-img-container">
-                  <img src="" alt="">
-                </div>
-                <div class="favourites-item-info">
-                  <p>Jacket</p>
-                  <p>Price: £<span>10.95</span></p>
-                </div>
-                <div class="close-btn-container">
-                  <button>
-                    <span class="material-symbols-outlined">
-                      close
-                    </span>
-                  </button>
-                </div>
-              </div>
-              <div class="favourites-item">
-                <div class="favourites-item-img-container">
-                  <img src="" alt="">
-                </div>
-                <div class="favourites-item-info">
-                  <p>Jacket</p>
-                  <p>Price: £<span>10.95</span></p>
-                </div>
-                <div class="close-btn-container">
-                  <button>
-                    <span class="material-symbols-outlined">
-                      close
-                    </span>
-                  </button>
-                </div>
-              </div>
-              <div class="favourites-item">
-                <div class="favourites-item-img-container">
-                  <img src="" alt="">
-                </div>
-                <div class="favourites-item-info">
-                  <p>Jacket</p>
-                  <p>Price: £<span>10.95</span></p>
-                </div>
-                <div class="close-btn-container">
-                  <button>
-                    <span class="material-symbols-outlined">
-                      close
-                    </span>
-                  </button>
-                </div>
-              </div>
-              <div class="favourites-item">
-                <div class="favourites-item-img-container">
-                  <img src="" alt="">
-                </div>
-                <div class="favourites-item-info">
-                  <p>Jacket</p>
-                  <p>Price: £<span>10.95</span></p>
-                </div>
-                <div class="close-btn-container">
-                  <button>
-                    <span class="material-symbols-outlined">
-                      close
-                    </span>
-                  </button>
-                </div>
-              </div>
-              <div class="favourites-item">
-                <div class="favourites-item-img-container">
-                  <img src="" alt="">
-                </div>
-                <div class="favourites-item-info">
-                  <p>Jacket</p>
-                  <p>Price: £<span>10.95</span></p>
-                </div>
-                <div class="close-btn-container">
-                  <button>
-                    <span class="material-symbols-outlined">
-                      close
-                    </span>
-                  </button>
-                </div>
-              </div>
-            </div>
+            <div class="favourites-items" id="favourites-items"></div>
           </div>
         </li>
         <li>
@@ -196,8 +115,7 @@
             <div class="basket-dropdown-heading">
               <p>Basket</p>
             </div>
-            <div class="basket-items" id="basket-items">
-            </div>
+            <div class="basket-items" id="basket-items"></div>
             <div class="basket-total">
               <p>Total: £<span>0</span></p>
             </div>
@@ -222,15 +140,30 @@
         <img src="/Images/pexels-godisable-jacob-1374910.jpg" alt="">
       </div>
     </section>
-    <section class="products-display">
-      <div class="section-nav-heading">
-        <button>Men</button>
-        <p>></p>
-        <button>Bestsellers</button>
-      </div>
-      <section class="men-bestsellers" id="men-bestsellers">
+      <section class="products-display">
+        <section class="men-section">
+          <section class="men-bestsellers-container" id="men-bestsellers-container">
+            <div class="section-nav-heading"></div>
+            <section class="men-bestsellers" id="men-bestsellers"></section>
+          </section>
+          <section class="men-shirts-container" id="men-shirts-container">
+            <div class="section-nav-heading"></div>
+            <section class="men-shirts" id="men-shirts"></section>
+          </section>
+          <section class="men-trousers-container" id="men-trousers-container">
+            <div class="section-nav-heading"></div>
+            <section class="men-trousers" id="men-trousers"></section>
+          </section>
+          <section class="men-trousers-container" id="men-trousers-container">
+            <div class="section-nav-heading"></div>
+            <section class="men-trousers" id="men-trousers"></section>
+          </section>
+          <section class="men-hoodies-container" id="men-hoodies-container">
+            <div class="section-nav-heading"></div>
+            <section class="men-hoodies" id="men-hoodies"></section>
+          </section>
+        </section>
       </section>
-    </section>
   </main>
   <script type="module" src="script.js"></script>
 </body>
