successfully implemented buttons for men section

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <nav>
       <h1 class="shop-title">Finesse</h1>
       <ul class="shop-sections">
-        <li class="shop-section" id="men">
+        <li class="shop-section men-section" id="men">
           <button class="men-btn">MEN</button>
-          <div class="dropdown hidden" id="dropdown">
+          <div class="dropdown men-section-dropdown" id="dropdown">
             <ul>
               <li>
                 <button>Bestsellers</button>
@@ -140,30 +140,8 @@
         <img src="/Images/pexels-godisable-jacob-1374910.jpg" alt="">
       </div>
     </section>
-      <section class="products-display">
-        <section class="men-section">
-          <section class="men-bestsellers-container" id="men-bestsellers-container">
-            <div class="section-nav-heading"></div>
-            <section class="men-bestsellers" id="men-bestsellers"></section>
-          </section>
-          <section class="men-shirts-container" id="men-shirts-container">
-            <div class="section-nav-heading"></div>
-            <section class="men-shirts" id="men-shirts"></section>
-          </section>
-          <section class="men-trousers-container" id="men-trousers-container">
-            <div class="section-nav-heading"></div>
-            <section class="men-trousers" id="men-trousers"></section>
-          </section>
-          <section class="men-trousers-container" id="men-trousers-container">
-            <div class="section-nav-heading"></div>
-            <section class="men-trousers" id="men-trousers"></section>
-          </section>
-          <section class="men-hoodies-container" id="men-hoodies-container">
-            <div class="section-nav-heading"></div>
-            <section class="men-hoodies" id="men-hoodies"></section>
-          </section>
-        </section>
-      </section>
+    <section class="products-display" id="products-display">
+    </section>
   </main>
   <script type="module" src="script.js"></script>
 </body>
