implented the accessories section display and btns

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </li>
         <li class="shop-section">
           <button class="women-btn">WOMEN</button>
-          <div class="dropdown hidden">
+          <div class="dropdown women-section-dropdown" id="dropdown">
             <ul>
               <li>
                 <button>Bestsellers</button>
@@ -55,8 +55,11 @@
         </li>
         <li class="shop-section">
           <button class="accessories-btn">ACCESSORIES</button>
-          <div class="dropdown hidden">
+          <div class="dropdown accessories-section-dropdown" id="dropdown">
             <ul>
+              <li>
+                <button>Bestsellers</button>
+              </li>
               <li>
                 <button>Jewellery</button>
               </li>
