added more buttons for site navigation

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
   <header>
     <nav>
-      <h1 class="shop-title">Finesse</h1>
+      <button class="title-btn" id="title-btn">
+        <h1 class="shop-title">Finesse</h1>
+      </button>
       <ul class="shop-sections">
         <li class="shop-section men-section" id="men">
           <button class="men-btn">MEN</button>
@@ -79,7 +81,7 @@
       <ul class="icons-list">
         <li>
           <button class="profile-icon" id="profile-icon-btn">
-            <span class="material-symbols-outlined">
+            <span class="material-symbols-outlined" id="profile-icon">
               person
             </span>
           </button>
@@ -97,7 +99,7 @@
         </li>
         <li>
           <button class="favourites-icon" id="favourites-btn">
-            <span class="material-symbols-outlined">
+            <span class="material-symbols-outlined" id="fav-icon">
               favorite
             </span>
           </button>
@@ -110,7 +112,7 @@
         </li>
         <li>
           <button class="basket-icon" id="basket-btn">
-            <span class="material-symbols-outlined">
+            <span class="material-symbols-outlined" id="basket-icon">
               shopping_basket
             </span>
           </button>
@@ -128,16 +130,16 @@
     </nav>
   </header>
   <main>
-    <section class="main-display">
+    <section class="main-display" id="main-display">
       <div class="main-display-left">
         <img src="/Images/pexels-saulo-leite-7695498.jpg" alt="">
-        <button>
+        <button class="main-display-men-btn" id="main-display-men-btn">
           <h2>MEN</h2>
         </button>
       </div>
       <div class="vertical-line"></div>
       <div class="main-display-right">
-        <button>
+        <button class="main-display-women-btn" id="main-display-women-btn">
           <h2>WOMEN</h2>
         </button>
         <img src="/Images/pexels-godisable-jacob-1374910.jpg" alt="">
